--- a/src/js/package.json
+++ b/src/js/package.json
@@ -18,13 +18,15 @@
 		"axios": "^0.19.0",
 		"cookie": "^0.3.1",
 		"jsonwebtoken": "^8.1.0",
-		"jwk-to-pem": "^1.2.6"
+		"jwk-to-pem": "^1.2.6",
+		"acorn": ">=7.1.1",
+		"minimist": ">=0.2.1"
 	},
 	"devDependencies": {
-		"aws-sdk": "^2.538.0",
 		"@types/node": "^12.7.8",
+		"aws-sdk": "^2.538.0",
 		"babel-eslint": "^10.0.3",
-		"eslint": "^6.5.0",
+		"eslint": "^7.4.0",
 		"eslint-config-airbnb": "^18.0.1",
 		"eslint-config-prettier": "^6.3.0",
 		"eslint-plugin-import": "^2.18.2",
@@ -33,7 +35,7 @@
 		"eslint-plugin-react": "^7.14.3",
 		"jsverify": "^0.8.4",
 		"leaked-handles": "^5.2.0",
-		"nyc": "^14.1.1",
+		"nyc": "^15.1.0",
 		"prettier": "^1.18.2",
 		"tape": "^4.11.0"
 	}
